# twitch_chat_scraper

./: .env  .env.example  Cargo.toml
migrations/2023-06-20-170549_users/: up.sql
migrations/2023-06-20-231956_comments/: up.sql
src/: db.rs  main.rs  models.rs  schema.rs  twitch.rs
