[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.0", features = ["postgres"] }
dotenv = "0.9.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
custom_derive ="0.1.7"
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"
irc = "0.15.0"
futures = "0.3.28"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
